--- a/02-Python Statements/07-Statements Assessment Test.ipynb
+++ b/02-Python Statements/07-Statements Assessment Test.ipynb
@@ -48,7 +48,8 @@
    },
    "outputs": [],
    "source": [
-    "#Code here"
+    "listWordsWithS = [s for s in st.split(' ') if s[0] is 's']
+     print(listWordsWithS)"
    ]
   },
   {
@@ -67,7 +68,7 @@
    },
    "outputs": [],
    "source": [
-    "#Code Here"
+    "[print(n) for n in range(0,11) if n%2 == 0]"
    ]
   },
   {
@@ -87,7 +88,7 @@
    "outputs": [],
    "source": [
     "#Code in this cell\n",
-    "[]"
+    "listDivisibleByThree = [n for n in range(0,51) if n%3 == 0]"
    ]
   },
   {
@@ -117,7 +118,7 @@
    },
    "outputs": [],
    "source": [
-    "#Code in this cell"
+    "[print(s + " is even!") for s in st.split(' ') if len(s)%2 == 0]"
    ]
   },
   {
@@ -136,7 +137,16 @@
    },
    "outputs": [],
    "source": [
-    "#Code in this cell"
+    "for n in range(0,101):
+      s=n
+      if (n%3==0):
+        s="Fizz"
+      if (n%5==0):
+        s="Buzz"
+      if (n%3==0 and n%5==0):
+        s="FizzBuzz"
+    
+      print(s)"
    ]
   },
   {
@@ -166,7 +176,7 @@
    },
    "outputs": [],
    "source": [
-    "#Code in this cell"
+    "listFL= [s[0] for s in st.split(' ')]"
    ]
   },
   {
